ajout img + css

--- a/index.html
+++ b/index.html
@@ -26,5 +26,12 @@
         <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
     </head>
     <body>
+    
+    <div id="personnages">
+    	<img src="img/test-colorfuly-accueil.png" alt="the mistory"/>
+    	<img src="img/test-the-mistory-accueil.png" alt="the mistory"/>
+    	<img src="img/test-monstrocorps-accueil.png" alt="the mistory"/>
+    </div>
+    
     </body>
 </html>
