mise en page css

--- a/index.html
+++ b/index.html
@@ -27,11 +27,20 @@
     </head>
     <body>
     
-    <div id="personnages">
-    	<img src="img/test-colorfuly-accueil.png" alt="the mistory"/>
-    	<img src="img/test-the-mistory-accueil.png" alt="the mistory"/>
-    	<img src="img/test-monstrocorps-accueil.png" alt="the mistory"/>
-    </div>
+   
+    <div id="global">
+		<div id="content">
+			<div id="personnages">
+			    <img src="img/test-colorfuly-accueil.png" alt="the mistory"/>
+			    <img src="img/test-the-mistory-accueil.png" alt="the mistory"/>
+			    <img src="img/test-monstrocorps-accueil.png" alt="the mistory"/>
+			</div>
+		</div>
+			
+		<div id="footer">
+			<p>The Mistory est un service exclusif de Bertrand Souriau <span id="copyright">– Copyright Monsieur Souriau 2012 – tous droits réservés</span></p>
+		</div>
+	</div>
     
     <script src="js/jquery-1.8.1.min.js" charset="utf-8"></script>
     </body>
