Mise au centre #personnages

--- a/index.html
+++ b/index.html
@@ -43,5 +43,6 @@
 	</div>
     
     <script src="js/jquery-1.8.1.min.js" charset="utf-8"></script>
+    <script src="js/javascript.js" charset="utf-8"></script>
     </body>
 </html>
